@@ -4,7 +4,7 @@ News
 Pyclewn 2.1
 -----------
 
-.. March 27, 2015
+.. March 28, 2015
 
 New features
 ^^^^^^^^^^^^
@@ -39,6 +39,8 @@ Bug fixes
   ``--terminal=tmux,split-window``.
 
 * Issue #15: The clewn buffers are now emptied after the 'Cquit' command.
+
+* Issue #18: Create the windows layout upon starting Pyclewn.
 
 Pyclewn 2.0.1
 -------------
